--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -3,10 +3,10 @@
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9A70E13C-1AA0-49D7-87CF-BED03657AF6B}</ProjectGuid>
+    <ProjectGuid>{7BD0FE98-E3EA-4CDD-A70D-C2FEA6D7988E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SoulEngine</RootNamespace>
@@ -14,7 +14,6 @@
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,66 +26,55 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;LINUX</DefineConstants>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\$(MonoGamePlatform)\x86\Debug\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>false</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
+    <DefineConstants>TRACE;LINUX</DefineConstants>
     <Optimize>true</Optimize>
-    <OutputPath>bin\$(MonoGamePlatform)\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>false</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>SoulEngine.ico</ApplicationIcon>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>SoulEngine.Starter</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Engine\Events\SystemEvents.cs" />
-    <Compile Include="src\Engine\Events\Listen.cs" />
-    <Compile Include="src\Engine\Events\EType.cs" />
-    <Compile Include="src\Engine\Events\ESystem.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\CharData.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\Tag.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\TagFactory.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\Tags\Bracket.cs" />
-    <Compile Include="src\Engine\Objects\Components\Transform.cs" />
-    <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
-    <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
-    <Compile Include="src\Engine\Objects\Components\Component.cs" />
-    <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
-    <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
     <Compile Include="src\Engine\Core\AssetManager.cs" />
     <Compile Include="src\Engine\Core\Assets.cs" />
     <Compile Include="src\Engine\Core\Context.cs" />
+    <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Helpers\Enums.cs" />
     <Compile Include="src\Engine\Core\Helpers\Functions.cs" />
-    <Compile Include="src\Engine\Meta\Info.cs" />
-    <Compile Include="src\Engine\Events\Event.cs" />
-    <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
-    <Compile Include="src\Engine\Objects\Scene.cs" />
-    <Compile Include="src\Engine\Objects\GameObject.cs" />
-    <Compile Include="src\Engine\Libraries\Settings.cs" />
-    <Compile Include="src\User\Scenes\ScenePrim.cs" />
-    <Compile Include="src\Engine\Objects\Ticker.cs" />
-    <Compile Include="src\User\Settings.cs" />
-    <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
+    <Compile Include="src\Engine\Core\WindowManager.cs" />
+    <Compile Include="src\Engine\Events\ESystem.cs" />
+    <Compile Include="src\Engine\Events\EType.cs" />
+    <Compile Include="src\Engine\Events\Event.cs" />
+    <Compile Include="src\Engine\Events\Listen.cs" />
+    <Compile Include="src\Engine\Events\SystemEvents.cs" />
+    <Compile Include="src\Engine\FilesManager\File.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\ImageLayer.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\Layer.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\Map.cs" />
@@ -107,35 +95,89 @@
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibConstants.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="src\Engine\Libraries\Input.cs" />
+    <Compile Include="src\Engine\Libraries\Settings.cs" />
+    <Compile Include="src\Engine\Meta\Info.cs" />
+    <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
+    <Compile Include="src\Engine\Objects\Components\Component.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\CharData.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\Tag.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\TagFactory.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\Tags\Bracket.cs" />
+    <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
+    <Compile Include="src\Engine\Objects\Components\Transform.cs" />
+    <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
+    <Compile Include="src\Engine\Objects\GameObject.cs" />
+    <Compile Include="src\Engine\Objects\Scene.cs" />
+    <Compile Include="src\Engine\Objects\Ticker.cs" />
+    <Compile Include="src\Engine\Objects\ViewObjects\Camera.cs" />
+    <Compile Include="src\Engine\Objects\ViewObjects\ScreenAdapter.cs" />
+    <Compile Include="src\User\EType.cs" />
+    <Compile Include="src\User\Scenes\ScenePrim.cs" />
+    <Compile Include="src\User\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>src\Engine\Libraries\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="NVorbis">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\NVorbis.dll</HintPath>
-    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="SoulLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>src\Engine\Libraries\SoulLib.dll</HintPath>
+      <HintPath>src\Engine\Libraries\External\SoulLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SoulEngine.ico" />
-    <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.txt" />
-    <Content Include="src\Engine\Libraries\External\TiledSharp\zlib\License.zlib.txt" />
-    <Content Include="src\Engine\Libraries\External\Newtonsoft.Json.dll" />
-    <Content Include="src\Engine\Libraries\External\SoulLib.dll" />
+    <EmbeddedResource Include="Icon.ico" />
+    <EmbeddedResource Include="Icon.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <MonoGameContentReference Include="Content\Content.mgcb" />
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
+      <Link>x86\SDL2.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\SDL2.dll">
+      <Link>x64\SDL2.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\soft_oal.dll">
+      <Link>x86\soft_oal.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\soft_oal.dll">
+      <Link>x64\soft_oal.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libSDL2-2.0.so.0">
+      <Link>x86\libSDL2-2.0.so.0</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libSDL2-2.0.so.0">
+      <Link>x64\libSDL2-2.0.so.0</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\libopenal.so.1">
+      <Link>x86\libopenal.so.1</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x64\libopenal.so.1">
+      <Link>x64\libopenal.so.1</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\libSDL2-2.0.0.dylib">
+      <Link>libSDL2-2.0.0.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\libopenal.1.dylib">
+      <Link>libopenal.1.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll.config">
+      <Link>MonoGame.Framework.dll.config</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
@@ -149,16 +191,13 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <MonoGameContentReference Include="Content\ContentBuilder.mgcb" />
+    <Content Include="src\Engine\Libraries\External\Newtonsoft.Json.dll" />
+    <Content Include="src\Engine\Libraries\External\SoulLib.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
