--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -104,8 +104,8 @@
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\CharData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tag.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TagFactory.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Border.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Color.cs" />
-    <Compile Include="src\Engine\Objects\Components\Renderer.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
     <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
     <Compile Include="src\Engine\Objects\GameObject.cs" />
