--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -67,6 +67,7 @@
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Helpers\Enums.cs" />
     <Compile Include="src\Engine\Core\Helpers\Functions.cs" />
+    <Compile Include="src\Engine\Core\OptimizationEngine.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
     <Compile Include="src\Engine\Core\WindowManager.cs" />
     <Compile Include="src\Engine\Debugging\DebugScene.cs" />
@@ -76,7 +77,6 @@
     <Compile Include="src\Engine\Events\Event.cs" />
     <Compile Include="src\Engine\Events\Listen.cs" />
     <Compile Include="src\Engine\Events\SystemEvents.cs" />
-    <Compile Include="src\Engine\FilesManager\File.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\ImageLayer.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\Layer.cs" />
     <Compile Include="src\Engine\Libraries\External\TiledSharp\Map.cs" />
@@ -101,11 +101,15 @@
     <Compile Include="src\Engine\Meta\Info.cs" />
     <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Components\Component.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveTexture\AnimationData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\CharData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tag.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TagFactory.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Border.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tags\Color.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileData.cs" />
+    <Compile Include="src\Engine\Objects\Components\Helpers\TiledMap\TileObject.cs" />
+    <Compile Include="src\Engine\Objects\Components\TiledMap.cs" />
     <Compile Include="src\Engine\Objects\Components\Transform.cs" />
     <Compile Include="src\Engine\Objects\Components\АctiveText.cs" />
     <Compile Include="src\Engine\Objects\GameObject.cs" />
