--- a/SoulEngine.csproj
+++ b/SoulEngine.csproj
@@ -67,7 +67,6 @@
     <Compile Include="src\Engine\Core\Core.cs" />
     <Compile Include="src\Engine\Core\Helpers\Enums.cs" />
     <Compile Include="src\Engine\Core\Helpers\Functions.cs" />
-    <Compile Include="src\Engine\Core\OptimizationEngine.cs" />
     <Compile Include="src\Engine\Core\Starter.cs" />
     <Compile Include="src\Engine\Core\WindowManager.cs" />
     <Compile Include="src\Engine\Debugging\DebugScene.cs" />
@@ -101,7 +100,7 @@
     <Compile Include="src\Engine\Meta\Info.cs" />
     <Compile Include="src\Engine\Objects\Components\ActiveTexture.cs" />
     <Compile Include="src\Engine\Objects\Components\Component.cs" />
-    <Compile Include="src\Engine\Objects\Components\Helpers\ActiveTexture\AnimationData.cs" />
+    <Compile Include="src\Engine\Objects\Components\Animation.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\CharData.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\Tag.cs" />
     <Compile Include="src\Engine\Objects\Components\Helpers\ActiveText\TagFactory.cs" />
